# Task_Scheduler_CPP

./: CMakeLists.txt  README.md  main.cpp  makefile  runAllFiles  testRun
header/: Base.hpp  Project.hpp  ProjectManager.hpp  Subtask.hpp  Task.hpp  subtask.hpp
src/: Base.cpp  Project.cpp  ProjectManager.cpp  Subtask.cpp  Task.cpp  subtask.cpp
test/: test.cpp
